[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/screen/GameScreen.gd" type="Script" id=1]
[ext_resource path="res://src/screen/Level.gd" type="Script" id=2]
[ext_resource path="res://src/level/Level1.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/screen/LevelViewport.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/screen/ParallaxBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/gui/BottomPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/gui/TopPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/ui/panelInset_brown.png" type="Texture" id=8]
[ext_resource path="res://resources/ui/buttonLong_brown.png" type="Texture" id=9]
[ext_resource path="res://resources/ui/buttonLong_brown_pressed.png" type="Texture" id=10]
[ext_resource path="res://resources/fonts/YatraOne16.res" type="DynamicFont" id=11]
[ext_resource path="res://resources/fonts/YatraOne18.res" type="DynamicFont" id=12]

[node name="GameScreen" type="Node2D"]

script = ExtResource( 1 )

[node name="Level" type="Node2D" parent="." index="0"]

script = ExtResource( 2 )
_sections_unfolded = [ "Pause" ]

[node name="Level1" parent="Level" index="0" instance=ExtResource( 3 )]

[node name="LevelViewport" parent="." index="1" instance=ExtResource( 4 )]

position = Vector2( 0, 7.29767 )
zoom = Vector2( 1.2, 1.2 )
_sections_unfolded = [ "Drag Margin", "Smoothing", "Transform" ]

[node name="ParallaxBackground" parent="LevelViewport" index="0" instance=ExtResource( 5 )]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="BottomPanel" parent="CanvasLayer" index="0" instance=ExtResource( 6 )]

[node name="TopPanel" parent="CanvasLayer" index="1" instance=ExtResource( 7 )]

pause_mode = 2
_sections_unfolded = [ "Pause" ]

[node name="Dialogs" type="Node2D" parent="CanvasLayer" index="2"]

[node name="LevelIntro" type="TextureRect" parent="CanvasLayer/Dialogs" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 441.0
margin_top = 57.0
margin_right = 856.0
margin_bottom = 569.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0
_sections_unfolded = [ "Pause" ]

[node name="OkButton" type="TextureButton" parent="CanvasLayer/Dialogs/LevelIntro" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 156.0
margin_top = 459.0
margin_right = 249.0
margin_bottom = 483.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="CanvasLayer/Dialogs/LevelIntro/OkButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_right = 91.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0.129412, 0.101961, 0.0784314, 1 )
text = "Aye"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="IntroText" type="Label" parent="CanvasLayer/Dialogs/LevelIntro" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 37.0
margin_right = 387.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.129412, 0.101961, 0.0784314, 1 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="LevelEnd" type="TextureRect" parent="CanvasLayer/Dialogs" index="1"]

pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 443.0
margin_top = 57.0
margin_right = 858.0
margin_bottom = 569.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0
_sections_unfolded = [ "Pause" ]

[node name="EndButton" type="TextureButton" parent="CanvasLayer/Dialogs/LevelEnd" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 464.0
margin_right = 255.0
margin_bottom = 488.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="CanvasLayer/Dialogs/LevelEnd/EndButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_right = 91.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0.129412, 0.101961, 0.0784314, 1 )
text = "Aye"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="EndText" type="Label" parent="CanvasLayer/Dialogs/LevelEnd" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_top = 39.0
margin_right = 383.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.129412, 0.101961, 0.0784314, 1 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[connection signal="pressed" from="CanvasLayer/Dialogs/LevelIntro/OkButton" to="Level" method="_on_OkButton_pressed"]

[connection signal="pressed" from="CanvasLayer/Dialogs/LevelEnd/EndButton" to="Level" method="_on_EndButton_pressed"]


